objects/AcctSeedERP__Purchase_Order__c/fields/Acceptence_Rejection_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Acceptence_Rejection_Confirmation_Date__c</fullName>
    <label>Acceptence / Rejection Confirmation Date</label>
    <type>Date</type>
</CustomField>