objects/AcctSeedERP__Purchase_Order__c/fields/Account_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Account_Instruction__c</fullName>
    <label>Account Instruction</label>
    <type>TextArea</type>
</CustomField>