objects/AcctSeedERP__Purchase_Order__c/fields/AcctSeedERP__Currency_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Currency_Conversion_Rate__c</fullName>
    <label>Currency Conversion Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>