objects/AcctSeedERP__Purchase_Order__c/fields/AcctSeedERP__Ledger__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Ledger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Denotes the associated ledger.</inlineHelpText>
    <label>Ledger</label>
    <referenceTo>AcctSeed__Ledger__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>