objects/AcctSeedERP__Purchase_Order__c/fields/AcctSeedERP__Order_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Order_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Order Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>