objects/AcctSeedERP__Purchase_Order__c/fields/AcctSeedERP__Shipping_Company__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Shipping_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders (Ship To Company)</relationshipLabel>
    <relationshipName>Purchase_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>