objects/AcctSeedERP__Purchase_Order__c/fields/AcctSeedERP__Status__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Status__c</fullName>
    <inlineHelpText>Select the status the Purchase Order should be updated to.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Order Creation</fullName>
                <default>true</default>
                <label>Order Creation</label>
            </value>
            <value>
                <fullName>Order Processed and Modulation</fullName>
            </value>
            <value>
                <fullName>PI Received and Confirmation</fullName>
            </value>
            <value>
                <fullName>BL and Documentation</fullName>
            </value>
            <value>
                <fullName>CHA Intervention and Payments</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Pending Delivery</fullName>
            </value>
            <value>
                <fullName>Delivery to Customer</fullName>
            </value>
            <value>
                <fullName>PO Raised</fullName>
                <label>Empty Container Returned back</label>
            </value>
            <value>
                <fullName>Delivery Completed</fullName>
            </value>
            <value>
                <fullName>Closed(Delivered / Cancelled)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>