objects/AcctSeedERP__Purchase_Order__c/fields/AcctSeedERP__Total__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Total__c</fullName>
    <label>Total</label>
    <summarizedField>AcctSeedERP__Purchase_Order_Line__c.AcctSeedERP__Total__c</summarizedField>
    <summaryForeignKey>AcctSeedERP__Purchase_Order_Line__c.AcctSeedERP__Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>