objects/AcctSeedERP__Purchase_Order__c/fields/AcctSeedERP__Vendor__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.AcctSeed__Accounting_Type__c</field>
            <operation>equals</operation>
            <value>Vendor, Customer and Vendor</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>