objects/AcctSeedERP__Purchase_Order__c/fields/Amount_of_Bill_of_Entry__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Bill_of_Entry__c</fullName>
    <label>Amount of Bill of Entry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>