objects/AcctSeedERP__Purchase_Order__c/fields/Any_Extra_Charges__c.field-meta.xml
<CustomField>
    <fullName>Any_Extra_Charges__c</fullName>
    <label>Any Extra Charges</label>
    <length>225</length>
    <type>Text</type>
</CustomField>