objects/AcctSeedERP__Purchase_Order__c/fields/Arrival_Notice_Received__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Notice_Received__c</fullName>
    <label>Arrival Notice Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>