objects/AcctSeedERP__Purchase_Order__c/fields/Balance_Payable_if_any__c.field-meta.xml
<CustomField>
    <fullName>Balance_Payable_if_any__c</fullName>
    <label>Balance Payable(if any)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>