objects/AcctSeedERP__Purchase_Order__c/fields/Bill_of_Lading__c.field-meta.xml
<CustomField>
    <fullName>Bill_of_Lading__c</fullName>
    <label>Bill of Lading</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Awaited</fullName>
            </value>
            <value>
                <fullName>Resent for Modification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>