objects/AcctSeedERP__Purchase_Order__c/fields/Bill_of_Lading_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_of_Lading_Number__c</fullName>
    <label>Bill of Lading Number</label>
    <length>225</length>
    <type>Text</type>
</CustomField>