objects/AcctSeedERP__Purchase_Order__c/fields/Bill_Received_from_CHA__c.field-meta.xml
<CustomField>
    <fullName>Bill_Received_from_CHA__c</fullName>
    <label>Bill Received from CHA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>