objects/AcctSeedERP__Purchase_Order__c/fields/Billing_Address_with_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_with_Zip_Code__c</fullName>
    <label>Billing Address with Zip Code</label>
    <type>TextArea</type>
</CustomField>