objects/AcctSeedERP__Purchase_Order__c/fields/BL_Sent__c.field-meta.xml
<CustomField>
    <fullName>BL_Sent__c</fullName>
    <label>BL Sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>