objects/AcctSeedERP__Purchase_Order__c/fields/Certificate_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Origin__c</fullName>
    <label>Certificate of Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Awaited</fullName>
            </value>
            <value>
                <fullName>Resent for Modification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>