objects/AcctSeedERP__Purchase_Order__c/fields/Certificate_of_Origin_Number__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Origin_Number__c</fullName>
    <label>Certificate of Origin Number</label>
    <length>225</length>
    <type>Text</type>
</CustomField>