objects/AcctSeedERP__Purchase_Order__c/fields/Check_on_port_of_destination__c.field-meta.xml
<CustomField>
    <fullName>Check_on_port_of_destination__c</fullName>
    <label>Check on port of destination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ok</fullName>
            </value>
            <value>
                <fullName>Not Ok</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>