objects/AcctSeedERP__Purchase_Order__c/fields/Check_on_Price__c.field-meta.xml
<CustomField>
    <fullName>Check_on_Price__c</fullName>
    <label>Check on Price</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Not OK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>