objects/AcctSeedERP__Purchase_Order__c/fields/Check_on_Size__c.field-meta.xml
<CustomField>
    <fullName>Check_on_Size__c</fullName>
    <label>Check on Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ok</fullName>
            </value>
            <value>
                <fullName>Not Ok</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>