objects/AcctSeedERP__Purchase_Order__c/fields/Commercial_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Invoice_Number__c</fullName>
    <label>Commercial Invoice Number</label>
    <type>TextArea</type>
</CustomField>