objects/AcctSeedERP__Purchase_Order__c/fields/Confirmation_from_Factory__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_from_Factory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmation from Factory</label>
    <type>Checkbox</type>
</CustomField>