objects/AcctSeedERP__Purchase_Order__c/fields/Confirmation_from_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_from_Vendor__c</fullName>
    <label>Confirmation from Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>