objects/AcctSeedERP__Purchase_Order__c/fields/Confirmation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Notes__c</fullName>
    <label>Confirmation Notes</label>
    <type>TextArea</type>
</CustomField>