objects/AcctSeedERP__Purchase_Order__c/fields/Container_Pick_Status__c.field-meta.xml
<CustomField>
    <fullName>Container_Pick_Status__c</fullName>
    <label>Container Pick Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Picked by Transport</fullName>
            </value>
            <value>
                <fullName>Not-Picked by Transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>