objects/AcctSeedERP__Purchase_Order__c/fields/Container_Returned_Confirmed_by_CHA__c.field-meta.xml
<CustomField>
    <fullName>Container_Returned_Confirmed_by_CHA__c</fullName>
    <label>Container Returned Confirmed by CHA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>