objects/AcctSeedERP__Purchase_Order__c/fields/Container_Type__c.field-meta.xml
<CustomField>
    <fullName>Container_Type__c</fullName>
    <label>Container Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>40&apos; HQ</fullName>
            </value>
            <value>
                <fullName>20&apos; HQ</fullName>
            </value>
            <value>
                <fullName>45&apos;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>