objects/AcctSeedERP__Purchase_Order__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <length>225</length>
    <type>Text</type>
</CustomField>