objects/AcctSeedERP__Purchase_Order__c/fields/Custom_Broker__c.field-meta.xml
<CustomField>
    <fullName>Custom_Broker__c</fullName>
    <label>Custom Broker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maestro</fullName>
            </value>
            <value>
                <fullName>Non-Maestro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>