objects/AcctSeedERP__Purchase_Order__c/fields/Custom_Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Custom_Broker_Name__c</fullName>
    <label>Custom Broker Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom Broker 1</fullName>
            </value>
            <value>
                <fullName>Custom Broker 2</fullName>
            </value>
            <value>
                <fullName>Custom Broker 3</fullName>
            </value>
            <value>
                <fullName>Custom Broker 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>