objects/AcctSeedERP__Purchase_Order__c/fields/Custom_Duty_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Custom_Duty_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Custom Duty Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders (Custom Duty Vendor)</relationshipLabel>
    <relationshipName>Purchase_Orders4</relationshipName>
    <type>Lookup</type>
</CustomField>