objects/AcctSeedERP__Purchase_Order__c/fields/Customer_Documents_Completed__c.field-meta.xml
<CustomField>
    <fullName>Customer_Documents_Completed__c</fullName>
    <label>Customer Documents Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>