objects/AcctSeedERP__Purchase_Order__c/fields/Date_and_time_stamp_of_approval_deny__c.field-meta.xml
<CustomField>
    <fullName>Date_and_time_stamp_of_approval_deny__c</fullName>
    <label>Date and time stamp of approval/deny</label>
    <type>DateTime</type>
</CustomField>