objects/AcctSeedERP__Purchase_Order__c/fields/Date_to_be_punched_as_per_Arrival_Notice__c.field-meta.xml
<CustomField>
    <fullName>Date_to_be_punched_as_per_Arrival_Notice__c</fullName>
    <label>Date to be punched as per Arrival Notice</label>
    <type>Date</type>
</CustomField>