objects/AcctSeedERP__Purchase_Order__c/fields/Delivery_Address_as_per_Document__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address_as_per_Document__c</fullName>
    <label>Delivery Address as per Document</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>