objects/AcctSeedERP__Purchase_Order__c/fields/Delivery_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Confirmation__c</fullName>
    <label>Delivery Confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery confirmed by customer</fullName>
            </value>
            <value>
                <fullName>Delivery not Confirmed by customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>