objects/AcctSeedERP__Purchase_Order__c/fields/Delivery_Details_Confirmed_from_Customer__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Details_Confirmed_from_Customer__c</fullName>
    <label>Delivery Details Confirmed from Customer</label>
    <type>TextArea</type>
</CustomField>