objects/AcctSeedERP__Purchase_Order__c/fields/Delivery_Details_Confirmed_from_Warehous__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Details_Confirmed_from_Warehous__c</fullName>
    <label>Delivery Details Confirmed from Warehous</label>
    <type>TextArea</type>
</CustomField>