objects/AcctSeedERP__Purchase_Order__c/fields/Desingnation__c.field-meta.xml
<CustomField>
    <fullName>Desingnation__c</fullName>
    <label>Desingnation</label>
    <type>TextArea</type>
</CustomField>