objects/AcctSeedERP__Purchase_Order__c/fields/Discharge_Port__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Port__c</fullName>
    <label>Discharge Port</label>
    <length>255</length>
    <type>Text</type>
</CustomField>