objects/AcctSeedERP__Purchase_Order__c/fields/Draft_BL_Received__c.field-meta.xml
<CustomField>
    <fullName>Draft_BL_Received__c</fullName>
    <label>Draft BL Received?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>