objects/AcctSeedERP__Purchase_Order__c/fields/Driver_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Driver_Contact_Name__c</fullName>
    <label>Driver Contact Name</label>
    <type>TextArea</type>
</CustomField>