objects/AcctSeedERP__Purchase_Order__c/fields/Driver_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Driver_Contact_Number__c</fullName>
    <label>Driver Contact Number</label>
    <type>Phone</type>
</CustomField>