objects/AcctSeedERP__Purchase_Order__c/fields/DROP_SHIP_OR_MAESTRO_ORDER__c.field-meta.xml
<CustomField>
    <fullName>DROP_SHIP_OR_MAESTRO_ORDER__c</fullName>
    <label>DROP SHIP OR MAESTRO ORDER</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drop Ship</fullName>
            </value>
            <value>
                <fullName>Maestro Orders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>