objects/AcctSeedERP__Purchase_Order__c/fields/Empty_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Empty_Return_Date__c</fullName>
    <label>Empty Return Date</label>
    <type>Date</type>
</CustomField>