objects/AcctSeedERP__Purchase_Order__c/fields/Estimate_Date_of_Final_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Date_of_Final_Delivery__c</fullName>
    <label>Estimate Date of Final Delivery</label>
    <type>Date</type>
</CustomField>