objects/AcctSeedERP__Purchase_Order__c/fields/Extra_Charges_confirmed_by_customer__c.field-meta.xml
<CustomField>
    <fullName>Extra_Charges_confirmed_by_customer__c</fullName>
    <label>Extra Charges confirmed by customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>