objects/AcctSeedERP__Purchase_Order__c/fields/Factory_Confirmation_in_case_of_Cancella__c.field-meta.xml
<CustomField>
    <fullName>Factory_Confirmation_in_case_of_Cancella__c</fullName>
    <label>Factory Confirmation in case of Cancella</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>